--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "three": "^0.182.0",
-    "three-stdlib": "^2.36.1"
+    "three-stdlib": "^2.36.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
