--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
+    "clsx": "^2.1.1",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.5.0",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1",
     "zustand": "^5.0.11"
