--- a/package.json
+++ b/package.json
@@ -10,28 +10,31 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
-    "@types/three": "^0.182.0",
+    "@playcanvas/react": "^0.11.3",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "obj2gltf": "^3.2.0",
+    "playcanvas": "^2.16.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.5.0",
-    "three": "^0.182.0",
-    "three-stdlib": "^2.36.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@gltf-transform/cli": "^4.3.0",
+    "@gltf-transform/core": "^4.3.0",
+    "@gltf-transform/extensions": "^4.3.0",
+    "@gltf-transform/functions": "^4.3.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "gltf-pipeline": "^4.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
